--- a/src/app/campgrounds/home/home.component.html
+++ b/src/app/campgrounds/home/home.component.html
@@ -9,15 +9,45 @@
   </button>
   <!-- <mat-form-field> -->
   <br />
-  <form class="campground-search">
+  <form class="campground-search" (submit)="onSearchCampground()">
     <mat-form-field class="example-full-width">
-      <!-- <mat-label>Search </mat-label> -->
-      <input matInput placeholder="Campground search..." />
+      <input
+        type="text"
+        matInput
+        name="searchCamp"
+        [(ngModel)]="search"
+        placeholder="Campground search..."
+      />
     </mat-form-field>
-    <button mat-button>Search</button>
+    <!-- <mat-autocomplete #auto="matAutocomplete">
+      <mat-option
+        *ngFor="let campgroundName of campgroundNamesList"
+        [value]="campgroundName"
+      >
+        {{ campgroundName }}
+      </mat-option>
+    </mat-autocomplete> -->
+    <button
+      mat-button
+      *ngIf="searchMode"
+      matSuffix
+      mat-icon-button
+      aria-label="Clear"
+      (click)="onClearSearch()"
+    >
+      <mat-icon>close</mat-icon>
+    </button>
+    <button mat-button type="submit">Search</button>
   </form>
 </mat-card>
-<mat-grid-list cols="4" rowHeight="2:2.5" gutterSize=".5rem">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-grid-list
+  class="campgrounds-grid"
+  cols="4"
+  rowHeight="2:2.5"
+  gutterSize="5px"
+  *ngIf="!isLoading"
+>
   <mat-grid-tile *ngFor="let campground of campgrounds">
     <mat-card>
       <img
@@ -40,8 +70,20 @@
       </div>
     </mat-card>
   </mat-grid-tile>
-  <!-- HARD CODED FOR CSS SETUP -->
-  <!-- <mat-grid-tile>
+</mat-grid-list>
+<div class="paginator">
+  <mat-paginator
+    [length]="totalCampgrounds"
+    [pageSize]="campgroundsPerPage"
+    [pageSizeOptions]="pageSizeOptions"
+    (page)="onChangedPage($event)"
+    *ngIf="campgrounds.length > 0"
+    #paginator
+  ></mat-paginator>
+</div>
+
+<!-- HARD CODED FOR CSS SETUP -->
+<!-- <mat-grid-tile>
     <mat-card>
       <img
         class="campground-preview-image"
@@ -150,5 +192,5 @@
         </button>
       </div>
     </mat-card>
-  </mat-grid-tile> -->
-</mat-grid-list>
+  </mat-grid-tile>
+</mat-grid-list> -->
