--- a/src/app/campgrounds/home/home.component.css
+++ b/src/app/campgrounds/home/home.component.css
@@ -48,7 +48,7 @@ mat-grid-list mat-card {
   overflow: hidden; */
   object-fit: cover;
   width: 100%;
-  height: 60%;
+  height: 70%;
 }
 
 .campground-preview-cta {
@@ -56,7 +56,7 @@ mat-grid-list mat-card {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   padding: 5px;
 }
 
