implemented lazy loading for campground create/edit actions and moved Header component to a separate module

--- a/src/app/campgrounds/home/home.component.html
+++ b/src/app/campgrounds/home/home.component.html
@@ -4,7 +4,11 @@
     Welcome to YelpCamp!
   </h1>
   <h3>View our hand-picked campgrounds from all over the world</h3>
-  <button mat-raised-button color="accent" [routerLink]="['/campgrounds/new']">
+  <button
+    mat-raised-button
+    color="accent"
+    [routerLink]="['/campgrounds/process/new']"
+  >
     Add New Campground
   </button>
   <!-- <mat-form-field> -->
