in-progress adding show campground module

--- a/src/app/campgrounds/home/home.component.html
+++ b/src/app/campgrounds/home/home.component.html
@@ -68,6 +68,7 @@
           class="campground-preview-button"
           mat-raised-button
           color="accent"
+          [routerLink]="['/campgrounds/show/', campground._id]"
         >
           Know More
         </button>
@@ -85,116 +86,3 @@
     #paginator
   ></mat-paginator>
 </div>
-
-<!-- HARD CODED FOR CSS SETUP -->
-<!-- <mat-grid-tile>
-    <mat-card>
-      <img
-        class="campground-preview-image"
-        mat-card-image
-        src="https://res.cloudinary.com/garyd/image/upload/v1581789527/bk3qcxwqtk5lnmzqqxh1.jpg"
-        alt="Campground Preview Image"
-      />
-      <div class="campground-preview-cta">
-        <mat-card-title class="campground-preview-title"
-          >Darjeeling</mat-card-title
-        >
-        <button
-          class="campground-preview-button"
-          mat-raised-button
-          color="accent"
-        >
-          Know More
-        </button>
-      </div>
-    </mat-card>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-card>
-      <img
-        class="campground-preview-image"
-        mat-card-image
-        src="https://res.cloudinary.com/garyd/image/upload/v1581789643/pipximdxt1eootiym1qn.jpg"
-        alt="Campground Preview Image"
-      />
-      <div class="campground-preview-cta">
-        <mat-card-title class="campground-preview-title"
-          >Gavilgarh Fort</mat-card-title
-        >
-        <button
-          class="campground-preview-button"
-          mat-raised-button
-          color="accent"
-        >
-          Know More
-        </button>
-      </div>
-    </mat-card>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-card>
-      <img
-        class="campground-preview-image"
-        mat-card-image
-        src="https://res.cloudinary.com/garyd/image/upload/v1581789783/veh4kycuxckrw0f9x9n1.jpg"
-        alt="Campground Preview Image"
-      />
-      <div class="campground-preview-cta">
-        <mat-card-title class="campground-preview-title"
-          >Harold Point - Killbear Park</mat-card-title
-        >
-        <button
-          class="campground-preview-button"
-          mat-raised-button
-          color="accent"
-        >
-          Know More
-        </button>
-      </div>
-    </mat-card>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-card>
-      <img
-        class="campground-preview-image"
-        mat-card-image
-        src="https://res.cloudinary.com/garyd/image/upload/v1581789990/mqe3pjikgpqpjlk2lxru.jpg"
-        alt="Campground Preview Image"
-      />
-      <div class="campground-preview-cta">
-        <mat-card-title class="campground-preview-title"
-          >Diveagar Backwater</mat-card-title
-        >
-        <button
-          class="campground-preview-button"
-          mat-raised-button
-          color="accent"
-        >
-          Know More
-        </button>
-      </div>
-    </mat-card>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-card>
-      <img
-        class="campground-preview-image"
-        mat-card-image
-        src="https://res.cloudinary.com/garyd/image/upload/v1583585088/vjh8mlyqcou4n3o4ipoq.jpg"
-        alt="Campground Preview Image"
-      />
-      <div class="campground-preview-cta">
-        <mat-card-title class="campground-preview-title"
-          >Camp Vibes</mat-card-title
-        >
-        <button
-          class="campground-preview-button"
-          mat-raised-button
-          color="accent"
-        >
-          Know More
-        </button>
-      </div>
-    </mat-card>
-  </mat-grid-tile>
-</mat-grid-list> -->
