--- a/src/app/campgrounds/show-campground/show-campground.component.html
+++ b/src/app/campgrounds/show-campground/show-campground.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div
-  class="container"
+  class="camp-container"
   fxLayout="row"
   fxLayout.xs="column"
   fxLayoutAlign="space-around"
@@ -38,3 +38,4 @@
     </mat-card>
   </div>
 </div>
+<div class="comments-container"></div>
