--- a/src/app/campgrounds/home/home.component.html
+++ b/src/app/campgrounds/home/home.component.html
@@ -1,3 +1,8 @@
+<mat-progress-bar
+  mode="indeterminate"
+  color="warn"
+  *ngIf="isLoading"
+></mat-progress-bar>
 <app-header></app-header>
 <mat-card>
   <h1 class="mat-display-2">
@@ -44,7 +49,7 @@
     <button mat-button type="submit">Search</button>
   </form>
 </mat-card>
-<mat-spinner *ngIf="isLoading"></mat-spinner>
+<!-- <mat-spinner *ngIf="isLoading"></mat-spinner> -->
 <mat-grid-list
   class="campgrounds-grid"
   cols="4"
